OwnYourDrive-Dev/force-app/main/default/objects/Vehicle_Service__c/Vehicle_Service__c.object-meta.xml
<CustomObject>
    <label>Vehicle Service</label>
    <nameField>
        <displayFormat>VEHSER-{000000}</displayFormat>
        <label>Vehicle Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>