OwnYourDrive-Dev/force-app/main/default/objects/Vehicle_Service__c/fields/Days_Left_For_Upcoming_Service__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_For_Upcoming_Service__c</fullName>
    <description>This is for calculating the number of days left for the Upcoming service.</description>
    <formula>( Upcoming_Service_Date__c + 120) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for calculating the number of days left for the Upcoming service.</inlineHelpText>
    <label>Days Left For Upcoming Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>