OwnYourDrive-Dev/force-app/main/default/objects/Vehicle_Service__c/fields/Number_of_Free_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Free_Services__c</fullName>
    <label>Number of Free Services</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>