OwnYourDrive-Dev/force-app/main/default/objects/Vehicle_Service__c/fields/Number_of_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kilometers__c</fullName>
    <inlineHelpText>Enter the Number of Kilometers travelled by the car after the last Service</inlineHelpText>
    <label>Number of Kilometers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>