OwnYourDrive-Dev/force-app/main/default/objects/Vehicle_Service__c/fields/Upcoming_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Service_Date__c</fullName>
    <description>This field is responsible for calculating the upcoming date for customer service</description>
    <formula>IF(
    VALUE($Label.Working_Days) = 5,

    /* 5-day working week: Sat + Sun excluded */
    CASE(
        MOD(Last_Service_Date__c + 90 - DATE(1900, 1, 7), 7),
        0, Last_Service_Date__c + 91,
        6, Last_Service_Date__c + 92,
        Last_Service_Date__c + 90
    ),

    /* 6-day working week: Only Sun excluded */
    IF(
        MOD(Last_Service_Date__c + 90 - DATE(1900, 1, 7), 7) = 0,
        Last_Service_Date__c + 91,
        Last_Service_Date__c + 90
    )
)</formula>
    <inlineHelpText>This field is responsible for calculating the upcoming date for customer service</inlineHelpText>
    <label>Upcoming Service Date</label>
    <type>Date</type>
</CustomField>